PGPLOT module Changes list
--------------------------

CHANGES v2.17, released May 8th, 2000
-------------------------------------

* Charles Lane's patch to do with new perl versions (PL_XXX stuff)
* Changed my email address.

CHANGES v2.16, released Mar 10th, 2000
--------------------------------------

* Added function struct to allow access to expose certain PGPLOT
  routines to the outside (currently cpgmove, cpgdraw)

CHANGES 2.15 released Oct 26th 1999
-----------------------------------

* Fixed Makefile.PL minor problem

CHANGES 2.14 released Oct 15th 1999
-----------------------------------

* Updated HELP some more.
* Removed ExtUtils from distribution and made seperate to avoid confusing
  CPAN, is now a PREREQ_PM
* Removed erroneous reference in PGPLOT.pm (Charles Lane).
* Added HINTS.irix

CHANGES v2.13 released May 14th, 1999
--------------------------------------

* Updates to ExtUtils::F77 (now v1.10) (q.t.) for RedHat 6.0 etc.

CHANGES v2.12 released May 11th, 1999
--------------------------------------

* Added PGPLOT_DIR to path for include files.
* Removed pgpt1 and pgerrb1 left over from old perl4 version - see
  pgcompatbility.p if you still need them.
* Changed macro names for perl 5.004_53 (Joshua Pritikin 
  <joshua.pritikin@db.com>) and inserted a conditional so older perl's
  still work.
* More ExtUtils::F77 changes (now at v1.09)  
* Small test.pl patch from Chuck Lane <lane@duphy4.physics.drexel.edu>
* Fixed error in test12.p
  
CHANGES v2.11 released Sep 11th, 1998
--------------------------------------

* Added support for PGPLOT_DIR in Makefile.PL, updated HELP.
* Mentioned 'perl Makefile.PL PREFIX=...' in README.
* More HELP stuff.
* ExtUtils::F77 v1.08

CHANGES v2.10 released May 21st, 1998.
--------------------------------------

* Various changes to ExtUtils::F77 q.v.

CHANGES v2.09 released 17/Feb/98
--------------------------------

* Documented xubpp problem in HELP because I got fed uo